# C-and-Cpp-Tests-with-CI-CD-Example

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README-enhanced.md  README.md  app.json  codecov.yml  lib.c  lib.h  main.c  makefile  run_coverage_test.sh  test-library.c  travis.yml
.github/workflows/: ci.yml
